styles/globals.scss
/* ... */
@keyframes ring {
  0% {
    transform: rotate(35deg);
  }
  12.5% {
    transform: rotate(-30deg);
  }
  25% {
    transform: rotate(25deg);
  }
  37.5% {
    transform: rotate(-20deg);
  }
  50% {
    transform: rotate(15deg);
  }
  62.5% {
    transform: rotate(-10deg);
  }
  75% {
    transform: rotate(5deg);
  }
  100% {
    transform: rotate(0deg);
  }
}

.notifications {
  width: 420px;
  /* width: 100%; */
}

@media (max-width: 500px) {
  .notifications {
    width: 265px;
    /* width: 100%; */
  }
}

.sidenav.navbar-vertical {
  box-shadow: 6px 20px 13px 0 rgba(136, 152, 170, 0.15);
}

.sidenav {
  // margin-top: 76px;
  z-index: 1345;
  width: 250px;
  &.collapse {
    width: 62px;
    .navbar-brand {
      display: none !important;
    }
    .nav-link-text {
      display: none;
    }
  }
}

.navbarHorizontal {
  flex-flow: row nowrap;
  justify-content: flex-start;
  position: fixed;
  width: calc(100% - 250px);
  height: 76px;
  margin-left: 250px;
  left: 0;
  background: transparent;
  z-index: 20;
  top: 0;
  padding: 30px;
  background: #2e2e2e;
  // z-index: 100000 !mportant;
  &.sideBarCollapse {
    width: calc(100% - 60px);

    margin-left: 60px;
  }
  box-shadow: 5px 8px 13px 0 rgba(136, 152, 170, 0.15);
}

.content-wrapper {
  margin-top: 76px;
}

.sidenav .sidenav-toggler2 {
  padding: 1.5rem;
}

.dropdown-menu {
  right: 0px;
  left: unset;
}

.navbar-vertical.navbar-expand-xs {
  max-width: 250px !important;
}

.dropdown-toggle {
  padding: 17px 11px !important;
}

.dropdown-toggle::after {
  margin-left: 0px;
  content: "";
  vertical-align: 0.255em;
  border-top: 0.6em solid;
  border-right: 0.6em solid transparent;
  border-bottom: 0;
  border-left: 0.6em solid transparent;
  margin-top: -7px;
  transform: translateY(4px);
}

body {
  background-color: #f2f2f2;
}

.navbarHorizontal {
  z-index: 11200;
}

.timerPay {
  position: absolute;
  left: 50%;
  bottom: 0;
  background: #2e2e2e;
  transform: translate(-50%, 100%);
  padding: 2px 15px 4px;
}

.timerPay:before {
  content: "";
  height: 65%;
  background: #2e2e2e;
  width: 36px;
  position: absolute;
  left: 0;
  transform: rotate(55deg);
  left: -21px;
  top: -1px;
}

.timerPay:after {
  content: "";
  height: 65%;
  background: #2e2e2e;
  width: 36px;
  position: absolute;
  /* left: 0; */
  transform: rotate(-55deg);
  right: -21px;
  top: -1px;
}

.navbar-vertical .navbar-nav .nav-link.removeAfter:after {
  opacity: 0;
}

.navbar-vertical.navbar-expand-xs .navbar-nav > .nav-item > .nav-link.active {
  margin-right: 0rem;
  margin-left: 0rem;
  padding-right: 1.5rem;
  padding-left: 1.5rem;
  border-radius: 0.375rem;
  background: #f6f9fc;
}

.navbar-vertical .navbar-nav .nav-link > i {
  font-size: 0.9375rem;
  line-height: 1.5rem;
  min-width: 1.7rem;
}

@media only screen and (max-width: 600px) {
  .marketing ul {
    padding-left: 0;
    a {
      font-size: 15px;
    }
  }
  .card-body.supportWrapper {
    padding: 1rem 0.5rem !important;
    font-size: 14px;
    h5 {
      text-align: center;
    }
    .card-body {
      padding: 7px !important;
      p {
        font-size: 11px !important;
      }
    }
    .container {
      padding: 0;
      .btn {
        padding-left: 4px;
        padding-right: 4px;
        font-size: 13px !important;
      }
      .card-header {
        padding: 0;
      }
      #accordion {
        padding: 0;
      }
    }
  }
  .videoWrapper p {
    font-size: 13px;
  }

  .nav-item.dropdown .notifications {
    max-width: 250px;
  }

  .Security p {
    font-size: 14px;
  }

  .account_information .form-group {
    margin-bottom: 0px;
  }

  .Change_Password .form-group {
    margin-bottom: 0px;
  }

  .Change_Password button {
    margin-top: 15px;
  }

  .Change_Password {
    font-size: 13px;
  }

  .account_information button {
    margin-top: 15px;
  }

  .account_information {
    font-size: 13px;
  }
}

.verification p {
  font-size: 14px;
}

.verification {
  font-size: 13px;
}

.profileImageWrapper .card-body {
  font-size: 13px;
}

.profileImageWrapper .card-body {
  padding: 10px;
}

.notification {
  // padding: 0.3em 0.7em;
  padding: 5px 8px;
  border-radius: 0.2em;
  font-size: 0.9em;
}

.navbar-nav-link {
  display: flex;
}

#dropdownMenuButton {
  padding: 4px 7px !important;
  display: flex;
}

.notification::after {
  font-size: 0.7em;
  top: -15px;
  right: -8px;
  padding: 3px 6px;
  line-height: 100%;
  transform: scale(0.5);
  transition-duration: 0.3s;
}

.btn-secondary {
  margin-right: 0px !important;
}

.navbarHorizontal {
  padding-left: 15px !important;
  padding-right: 15px !important;
}

.dropdown-menu span.text-dark {
  font-size: 13px;
}

#dropdownMenuButton {
  padding: 14px 7px !important;
}

.greenColor {
  color: #5e8f3b;
}

.dropdown-toggle:empty::after {
  margin-left: 0;
  margin-left: 0px;
  content: "";
  vertical-align: 0.255em;
  border-top: 0.6em solid;
  border-right: 0.6em solid transparent;
  border-bottom: 0;
  border-left: 0.6em solid transparent;
  margin-top: -7px;
  transform: translateY(4px);
}

.dropdown-menu {
  right: 0px;
  left: unset !important;
}

.scroll-wrapper {
  overflow: auto !important;

  /* width */
  &::-webkit-scrollbar {
    width: 3px;
  }

  /* Track */
  &::-webkit-scrollbar-track {
    background: #f1f1f1;
  }

  /* Handle */
  &::-webkit-scrollbar-thumb {
    background: #c2c2c2;
  }

  /* Handle on hover */
  &::-webkit-scrollbar-thumb:hover {
    background: #919191;
  }
}

.navbar-vertical .navbar-nav .nav-link[data-toggle="collapse"]:after {
  font-family: "Font Awesome 5 Free";
  font-weight: 700;
  font-style: normal;
  font-feature-settings: normal;
  font-variant: normal;
  display: inline-block;
  margin-left: auto;
  content: "";
  background: url(../svg/angleRight.svg);
  transition: all 0.15s ease;
  color: #ced4da;
  text-rendering: auto;
  -webkit-font-smoothing: antialiased;
  width: 8px;
  height: 18px;
  background-repeat: no-repeat;
}
/* ... */

